correct spillover of portfolio item cover

--- a/stylesheets/main_stylesheet.css
+++ b/stylesheets/main_stylesheet.css
@@ -145,8 +145,9 @@ img.keys {
 	text-align: center;
 	position: absolute;
 	padding: 0px;
-	width: 100%;
+	width: 92%;
 	height: 86%;
+	margin: 0 4%;
 	top: 0px;
 	left: 0px;
 	background: #36417d none repeat scroll 0% 0%;
@@ -156,6 +157,9 @@ img.keys {
 	transition: all 0.3s ease-out 0s;
 }
 #pollarity-cover {
+	height: 87%;
+}
+#this-site-cover {
 	height: 87%;
 }
 .portf-item-cover:hover {
